sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:9: error: not found: value fini
		fini=true
                ^AlgCocktailSort3:26: error: not found: value fini
	} while (fini==false&&fini2==false)
                 ^